Bug fixes and readability changes

--- a/client/src/components/DetailsPage/ProgressTabs/TabThree/TabThree.css
+++ b/client/src/components/DetailsPage/ProgressTabs/TabThree/TabThree.css
@@ -86,7 +86,7 @@
 
 .whats_next_card{
     width: 100%;
-    height: 99%;
+    height: 100%;
     border: solid 1px black;
     border-radius: 10px;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
